[gd_scene load_steps=3 format=3 uid="uid://nfppd3a8ikdb"]

[ext_resource type="Script" uid="uid://bty4slif08og7" path="res://scripts/ui/exit.gd" id="1_gjth3"]

[sub_resource type="Theme" id="Theme_gjth3"]

[node name="Exit" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_gjth3")
script = ExtResource("1_gjth3")

[node name="ExitLayer" type="CanvasLayer" parent="."]
visible = false

[node name="CanvasModulate" type="ColorRect" parent="ExitLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.87451)

[node name="Container" type="VBoxContainer" parent="ExitLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.32
anchor_top = 0.399
anchor_right = 0.673
anchor_bottom = 0.631
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Quit" type="Label" parent="ExitLayer/Container"]
layout_mode = 2
text = "Do you want to return to main menu?"
horizontal_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="ExitLayer/Container"]
layout_mode = 2
alignment = 1

[node name="Yes" type="Button" parent="ExitLayer/Container/ButtonContainer"]
layout_mode = 2
action_mode = 0
text = "Yes"

[node name="No" type="Button" parent="ExitLayer/Container/ButtonContainer"]
layout_mode = 2
action_mode = 0
text = "No
"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="ExitLayer/Container/ButtonContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="ExitLayer/Container/ButtonContainer/No" to="." method="_on_no_pressed"]
